# pmdaemon

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  PMDAEMON_CODE_REVIEW_TODO.md  README.md  RELEASE.md  RELEASE_v0.1.1.md  RELEASE_v0.1.2.md  simple_restart_test.json  simple_uptime_test.json  test_restart_count.sh  test_script.sh  test_status_display.sh  test_uptime_calculation.rs  working_test.json
.github/workflows/: ci.yml  deploy-docs.yml  docs.yml  release.yml
.windsurf/task-logs/: task-log_2025-05-26-19-20_code-review-and-todo-generation.md
assets/: README.md  flow.mmd
docs/: CROSS_PLATFORM.md  DEPLOYMENT.md  README.md  RELEASE_NOTES_CROSS_PLATFORM.md  docusaurus.config.js  package.json  sidebars.js
docs/.docusaurus/: client-manifest.json  client-modules.js  docusaurus.config.mjs  globalData.json  registry.js  routes.js  routesChunkNames.json  site-metadata.json
docs/changelog/: 2025-05-25-v0.1.0.md  2025-05-26-v0.1.1.md  2025-05-27-v0.1.2.md  2025-05-28-v0.1.3.md  2025-05-29-v0.1.4.md  authors.yml
docs/docs/advanced/: clustering.md  logging.md  performance-tuning.md  security.md  troubleshooting.md
docs/docs/api/: api-examples.md  authentication.md  error-handling.md  library-usage.md  rest-api.md  websocket-api.md
docs/docs/architecture/: overview.md
docs/docs/cli/: commands.md  configuration-options.md  environment-variables.md  exit-codes.md
docs/docs/comparison/: pm2-vs-pmdaemon.md
docs/docs/configuration/: advanced-configuration.md  best-practices.md  ecosystem-files.md  environment-specific.md  process-configuration.md  schema-validation.md
docs/docs/examples/: clustering.md  deployment-examples.md  integration-examples.md  use-cases.md
docs/docs/features/: configuration.md  cross-platform.md  health-checks.md  load-balancing.md  monitoring.md  web-api.md  (+2 more)
examples/: CONFIG_USAGE.md  README.md  SCHEMA_VALIDATION.md  comprehensive_config_examples.bat  comprehensive_config_examples.ps1  comprehensive_config_examples.sh  demo_delete_features.sh  ecosystem.json  ecosystem.schema.json  ecosystem.toml  ecosystem.yaml  health_check_demo.rs  simple.json  test_all_formats.sh  test_delete_functionality.sh
scripts/: test-cross-platform.sh
src/: config.rs  error.rs  health.rs  lib.rs  manager.rs  monitoring.rs  process.rs  signals.rs  web.rs
tests/: config_formats_test.rs  e2e_tests.rs  integration_tests.rs
(+89 files in other folders)
